<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agents"
            android:icon="@drawable/agent"
            android:title="@string/agent" />

        <item
            android:id="@+id/nav_buddies"
            android:icon="@drawable/amulet"
            android:title="@string/buddies" />

        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/card"
            android:title="@string/cards" />

        <item
            android:id="@+id/nav_currencies"
            android:icon="@drawable/dollar"
            android:title="@string/currencies" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/maps"
            android:title="@string/maps" />

        <item
            android:id="@+id/nav_titles"
            android:icon="@drawable/badge"
            android:title="@string/titles" />

        <item
            android:id="@+id/nav_weapons"
            android:icon="@drawable/pistol"
            android:title="@string/weapons" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>