<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lelestacia.valorantgamepedia.ui.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_agents"
        android:name="com.lelestacia.valorantgamepedia.ui.fragment.AgentsFragment"
        android:label="@string/agent"
        tools:layout="@layout/fragment_agents" >
        <action
            android:id="@+id/list_to_detail"
            app:destination="@id/agentsDetailActivity" />
    </fragment>
    <fragment
        android:id="@+id/nav_maps"
        android:name="com.lelestacia.valorantgamepedia.ui.fragment.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_weapons"
        android:name="com.lelestacia.valorantgamepedia.ui.fragment.WeaponsFragment"
        android:label="@string/weapons"
        tools:layout="@layout/fragment_weapons" />
    <activity
        android:id="@+id/agentsDetailActivity"
        android:name="com.lelestacia.valorantgamepedia.ui.activity.AgentsDetailActivity"
        android:label="activity_agents_detail"
        tools:layout="@layout/activity_agents_detail" >
        <argument
            android:name="uuid"
            app:argType="string" />
    </activity>
</navigation>