<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.weapons.weapons_detail.DetailWeaponActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_weapon_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/weapons"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_weapon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sen_extrabold"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_weapon_icon"
            tools:text="ODIN" />

        <TextView
            android:id="@+id/tv_weapon_header_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/weapon_stat"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_weapon_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_weapon_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_weapon_header_stat"
            tools:itemCount="2"
            tools:listitem="@layout/item_weapon_stat" />


        <TextView
            android:id="@+id/tv_header_weapon_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/weapon_skin"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/rv_weapon_stat"
            app:layout_constraintTop_toBottomOf="@id/rv_weapon_stat" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_weapon_skin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_header_weapon_skin"
            tools:listitem="@layout/item_weapon_skin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>