<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".ui.activity.AgentsDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <ImageView
            android:id="@+id/iv_agent_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_of_agent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@drawable/fullportrait"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/tv_agent_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sen_extrabold"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_agent_photo"
            tools:text="Fade" />

        <TextView
            android:id="@+id/tv_agent_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sen"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_agent_name"
            tools:text="@string/dummy_agent_description" />

        <TextView
            android:id="@+id/tv_header_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/agent_tag"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_agent_description"
            app:layout_constraintTop_toBottomOf="@id/tv_agent_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_agent_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/tv_agent_description"
            app:layout_constraintStart_toStartOf="@+id/tv_agent_description"
            app:layout_constraintTop_toBottomOf="@id/tv_header_tag"
            tools:itemCount="3"
            tools:listitem="@layout/item_agent_tag" />

        <Space
            android:id="@+id/spacer_tag"
            android:layout_width="0dp"
            android:layout_height="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_agent_description"
            app:layout_constraintStart_toStartOf="@+id/tv_agent_description"
            app:layout_constraintTop_toBottomOf="@id/rv_agent_tag" />

        <TextView
            android:id="@+id/tv_header_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/agent_role"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_agent_description"
            app:layout_constraintTop_toBottomOf="@id/spacer_tag" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_agent_roles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/cardBackgroundColor"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_agent_description"
            app:layout_constraintStart_toStartOf="@+id/tv_agent_description"
            app:layout_constraintTop_toBottomOf="@id/tv_header_role">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/iv_agent_role_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/agent_role"
                    app:layout_constraintStart_toStartOf="@id/tv_agent_role_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_agent_role_title"
                    app:tint="?iconTint"
                    tools:src="@drawable/ic_broken_image" />

                <TextView
                    android:id="@+id/tv_agent_role_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/sen_extrabold"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Initiator" />

                <TextView
                    android:id="@+id/tv_agent_role_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/sen"
                    android:justificationMode="inter_word"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/tv_agent_role_title"
                    app:layout_constraintStart_toEndOf="@id/iv_agent_role_icon"
                    app:layout_constraintTop_toTopOf="@id/iv_agent_role_icon"
                    tools:text="@string/dummy_role_description" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_agent_ability_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/agent_ability"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/rv_agent_skill"
            app:layout_constraintStart_toStartOf="@id/cv_agent_roles"
            app:layout_constraintTop_toBottomOf="@id/cv_agent_roles" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_agent_skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_agent_ability_header"
            tools:itemCount="1"
            tools:listitem="@layout/item_skill_active" />

        <Space
            android:layout_width="0dp"
            android:layout_height="24dp"
            app:layout_constraintEnd_toEndOf="@+id/rv_agent_skill"
            app:layout_constraintStart_toStartOf="@+id/rv_agent_skill"
            app:layout_constraintTop_toBottomOf="@id/rv_agent_skill" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>